k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-python-demo
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cicd-python-demo
  template:
    metadata:
      labels:
        app: cicd-python-demo
    spec:
      containers:
        - name: cicd-python-demo
          image: ilgar27/cicd-python-demo:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
