k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-python-demo-service
spec:
  selector:
    app: cicd-python-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
