k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-python-demo-ingress
  namespace: dev
spec:
  rules:
    - host: cicd-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-python-demo-service
                port:
                  number: 80
